<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 
   	   	Pour la vue "activity_main   
    -->
    <string name="app_name">Promenades</string>
     <string name="version">Version 1.3</string>
    <string name="realiseePar">Réalisée par :</string> 
    <string name="nomDeveloppeurs">David - Hugo - Matthieu</string> 
    <string name="tapScreenToEnter">tap screen to continue</string> 
   
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="provider_enabled">The provider %s is now enabled</string>
	<string name="provider_disabled">The provider %s is now disabled</string>
	<string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s avec une précision de %4$s mètres </string>
	<string name="provider_new_status">The provider %1$s has now a new status %2$s</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_hello_google_map">HelloGoogleMapActivity</string>
    <string name="mapKey">AIzaSyCFTBLjsfp_84xx3Sntqwf4VVYtAuAbiNQ</string>
    
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_mdp_oublie">MdpOublie</string>
    <string name="title_activity_inscription_via_mail">InscriptionViaMail</string>
    <string name="title_activity_ajout_randonnee">AjoutRandonnee</string>   
    <string name="title_activity_details_randonnee">DetailsRandonnee</string>
    <string name="title_activity_publier_avis">PublierAvis</string>
     <string name="title_activity_reglage">Réglages</string>
     <string name="title_activity_historique_randonnee">Historique</string>
    <string name="title_activity_enregistrer_chemin_randonnee">EnregistrerCheminRandonnee</string>
    <string name="title_activity_ajout_fichier_gps">AjoutFichierGPS</string>

    <string name="chargement">Chargement des données</string>
   
	<!-- 
   	   	Pour la vue "activity_reglage"   
    -->
	<string name="nomAZ">Trier par nom A->Z</string>
	<string name="nomZA">Trier par nom Z->A</string>
	<string name="distanceDecroissante">Distance décroissante</string>
	<string name="distanceCroissante">Distance croissante</string>
	<string name="difficulteDecroissante">Difficulté décroissante</string>
	<string name="difficulteCroissante">Difficulté croissante</string>
	
   <!-- 
   	   	Pour la vue "activity_ajout_randonnee   
    -->
    <string name="titleNameAdd">Nom de la randonnée</string>
    <string name="titleUploadFileAdd">Chargez image</string>
    <string name="titleDescriptionAdd">Description</string>
    <string name="titleDifficultyAdd">Difficulté</string>
    <string name="titleButtonAdd">Créer</string>

    
	<!-- 
   	   	Pour la vue "activity_details_randonnee"   
    -->
	<string name="titleButtonHistoriqueDetails">Votre historique</string>
	<string name="titleButtonCarteDetails">Voir carte</string>
	<string name="titleLabelNomDetails">Nom : </string>
	<string name="titleLabelDureeDetails">Durée : </string>
	<string name="titleLabelDescriptionDetails">Description : </string>
	<string name="titleLabelDistanceDetails">Distance : </string>
	<string name="titleLabelDifficulteDetails">Difficulté : </string>
	
	<!-- 
   	   	Pour la vue "activity_enregistrer_promenade"   
    -->
	<string name="titleButtonEnregistrementEnregistrerPromenade">Commencer</string>
	<string name="titleButtonEnregistrerEnregistrerPromenade">Enregistrer</string>
</resources>
